# ipto

./: .gitignore  AGENTS.md  README.md  analysis.txt  pom.xml  statistics.txt
,github/workflows/: erlang-ci.yml  java-ci.yml  rust-ci.yml
.github/workflows/: erlang-ci.yml  java-ci.yml  rust-ci.yml
admin-web/: README.md  package-lock.json  package.json  svelte.config.js
apps/admin-web/: README.md  package-lock.json  package.json  svelte.config.js
brand/: README.md
db/db2/: README.md  boot.sql  generate_schema_mermaid.py  load-udf.sql  procedures.sql  readme.txt  schema.sql  setup-for-test.py
db/java/: pom.xml
db/postgresql/: README.md  analysis.sql  boot.sql  generate_schema_mermaid.py  procedures.sql  schema.sql  setup-for-test.py
doc/: Configuration.md  Model.md  Retrieving_using_GraphQL.md  Setup.md  Using_Java.md  graphql-runtime-flow.md
doc/system/: sysdoc.tex  techdoc.cls
erepo/: README.md  rebar.config
erepo/doc/: BACKEND_CONTRACT.md  HOT_UPGRADE.md
erepo/include/: erepo.hrl
erepo/src/: erepo.app.src  erepo.appup  erepo.erl  erepo_app.erl  erepo_assoc.erl  erepo_attr.erl  erepo_backend.erl  erepo_cache.erl  erepo_db.erl  erepo_db_memory.erl  erepo_db_neo4j.erl  erepo_db_pg.erl  erepo_event.erl  erepo_graphql.erl  erepo_graphql_adapter.erl  erepo_graphql_config.erl  erepo_graphql_mutation_resource.erl  erepo_graphql_object_resource.erl  erepo_graphql_query_resource.erl  erepo_graphql_resolvers.erl  erepo_graphql_schema.erl  (+11 more)
erl/: README.md
graphql/: pom.xml
implementations/rust/: Cargo.toml  FEATURE_COMPLETENESS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
implementations/rust/docker/init/: 00_schema.sql
implementations/rust/scripts/: python_backend_benchmark.py
implementations/rust/src/: backend.rs  graphql.rs  graphql_sdl.rs  lib.rs  model.rs  repo.rs  search_ast.rs  search_cypher.rs  search_expr.rs  search_filters.rs  search_query.rs  search_sql.rs
implementations/rust/src/backends/: mod.rs  neo4j.rs  postgres.rs
implementations/rust/tests/: backend_parity.rs  neo4j_integration.rs  postgres_integration.rs  real_backend_runner_contract.rs  repo_contract.rs
it/: pom.xml  statistics.txt
quarkus-app/: .gitignore  README.md  pom.xml
repo/: pom.xml  statistics.txt
repo-cdi/: pom.xml
rust/: Cargo.toml  FEATURE_COMPLETENESS.md  README.md  docker-compose.yml
udf/: pom.xml
(+883 files in other folders)
